// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect should render <MenuSelect /> with items 1`] = `
<div>
  <select
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "See all",
          }
        }
      />
    </option>
    <option
      value="foo"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "foo ()",
          }
        }
      />
    </option>
    <option
      value="bar"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar ()",
          }
        }
      />
    </option>
  </select>
</div>
`;

exports[`MenuSelect should render with custom css classes 1`] = `
<div>
  <select
    className="foo"
    onChange={[Function]}
    value=""
  >
    <option
      className="bar"
      value=""
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "See all",
          }
        }
      />
    </option>
    <option
      className="bar"
      value="foo"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "foo ()",
          }
        }
      />
    </option>
    <option
      className="bar"
      value="bar"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar ()",
          }
        }
      />
    </option>
  </select>
</div>
`;
